添加配置项读写接口，日志，错误代码定义
git-svn-id: svn://192.168.1.8/ontom/trunk@4 85aebdb3-f732-af43-9dbd-bcef24ea9265

--- a/README
+++ b/README
@@ -13,3 +13,9 @@ ontom 是用来进行充电桩外设监控的核心程序。
 =========
 	* ajax.c 实现后台通信所需的xml文件的动态生成
 	* bms.c  实现和BMS系统的通信
+
+FAQ
+=========
+* 获取xml文件有什么讲究？
+	xml文件需要存储在快速缓存中，或是动态快速生成，以便快速访问。
+	xml文件存在于内存中。
