git-svn-id: svn://192.168.1.8/ontom/trunk@566 85aebdb3-f732-af43-9dbd-bcef24ea9265

--- a/README
+++ b/README
@@ -45,15 +45,15 @@ FAQ
     3. 浏览器端通过返回结果确定跳转页面。
 内建http服务器的多种用途:
     1. AJAX 支持。满足浏览器端和服务器端的时事通信。
-    2. 浏览器端调试接口。可通过浏览器端方位debug.html文件访问、修改当前程序配置数据。
+    2. 浏览器端调试接口。可通过浏览器端访问debug.html文件访问、修改当前程序配置数据。
     3. 支持后期调试扩展。可讲日志输入至浏览器端，方便调试之用。
 串口服务线程工作原理：
     1. 异步I/O。异步的串口读写方式使得读写功能模块放在一个线程实现成为可能，加上系统逻辑
        按照事件驱动的方式实现，使得异步I/O从表面上看来原理简单，易于实现和功能的增删。
     2. 工作模式。串口的工作模式由初始状态决定，若初始状态串口为BP_UART_MASTER，那么串口
        是主机模式，若初始状态为BP_UART_SLAVE则标识串口为从机模式。和综合采样单元通信时
-       串口为主机模式，采用一问一答式的方式进行数据交换，和后台集中器通信时采用被动回答方式
-       当集中器向监控提出数据请求时，监控根据请求的数据内容返回相应的数据。
+       串口为主机模式，采用一问一答式的方式进行数据交换，和后台集中器通信时采用被动回答
+       方式当集中器向监控提出数据请求时，监控根据请求的数据内容返回相应的数据。
     3. 数据帧格式。串口数据帧格式关乎通信是否完成的判定，当前程序逻辑兼容两种主要的帧格式
        分别是：
        格式1： 魔数 + 地址 + 长度 + 数据 + 校验
