git-svn-id: svn://192.168.1.8/ontom/trunk@595 85aebdb3-f732-af43-9dbd-bcef24ea9265

--- a/README
+++ b/README
@@ -164,7 +164,7 @@ FAQ
 AJAX相关：
     1. 在此鸣谢： mongoose 开发组。
     2. 提供监控程序内部变量监视，修改，查询接口。
-    3. 修改了mongoose部分代码逻辑，主要更改了缓冲区大小从原来的2K修改为8K，用来适应较大
+    3. 修改了mongoose缓冲区大小，主要更改了缓冲区大小从原来的2K修改为8K，用来适应较大
        的输出文件，例如调试文件/debug.html
     4. HTTP返回头中添加了返回文件类型，这个属性是后来加上的，主要目的是为了适配xml文件
        和html文件，也就是真正在用的AJAX请求文件和调试文件。通过ct属性进行设置，例如：
