--- a/README
+++ b/README
@@ -9,6 +9,7 @@ ontom 是用来进行充电桩外设监视和控制的核心程序。
 * 设置认证流程
 * 内建http服务器的多种用途
 * 串口服务线程工作原理
+* BMS 工作原理
 * 定时器的使用
 * AJAX相关
 * 配置
@@ -102,10 +103,96 @@ FAQ
        完成有决定性意义。
     4. 数据交互。在第一点中指出了，串口通信逻辑采用事件驱动，具体说明可以看第一部分-系统
        设计原理第3点得例子。
-    5. 关于校验。为了满足灵活的校验方式变更，设计了一个灵活的帧校验事件，当检测到数据帧
+    5. 关于校验。为了满足灵活的校验方式变更，设计了一个帧校验事件，当检测到数据帧
        长度接受完成后，会发送数据帧校验事件，在这里，不同的模块可以根据自己的需求确定采用
        那种校验方式，只需要给系统返回一个校验是否成功的结果即可，系统根据返回结果确定
        下一步是否应该发送BP_RX_DONE或是BP_RX_ERROR事件。
+BMS 工作原理：
+    1. BMS通过CAN总线进行通信，执行标准为GB/T 27930-2011, SAE J1939-21:2006
+    2. 为了满足多报数据传输的需求，特此设计了基于事件通知的逻辑结构，不同的数据包在完成传输
+       过程中，会发送不同的事件告知处理程序，以下是完整的CAN通信事件定义(bms.h中定义)：
+       /*
+	* 读到一个完整数据包后调用该函数
+	*/
+       typedef enum {
+	   // 无效事件，初始化完成前收到该消息
+	   EVENT_INVALID    = 0,
+
+	   /* 数据包接受完成。系统中存在两个和CAN接口相关的线程，一个
+	    * 是CAN数据读取线程，还有一个是CAN数据发送线程，这两个线程
+	    * 对CAN的操作都是同步的，因此，在读取数据包时读线程会被阻塞
+	    * 因此需要通过该事件来通知系统，已经完成了数据包的读取。
+	    */
+	   EVENT_RX_DONE    = 1,
+
+	   /* 数据包接收错误。在阻塞读取CAN数据包时，发生数据包读取错误，
+	    * 会收到该事件，表征数据包有问题，应该作相应处理。
+	    */
+	   EVENT_RX_ERROR   = 2,
+
+	   /* 数据包发送请求。系统中CAN数据的发送线程是同步的，可以通过
+	    * 该事件来提醒系统，目前可以进行数据包的发送，若系统有数据包发送
+	    * 则设定发送数据，交由发送县城进行发送，若没有数据要发送，则返回一个
+	    * 不需要发送的结果即可。
+	    */
+	   EVENT_TX_REQUEST = 3,
+
+	   /* 连接管理模式下的请求发送数据包，进行连接数据控制。
+	    */
+	   EVENT_TX_TP_RTS = 4,
+	   /* 连接管理模式下的准备发送数据包，进行连接数据控制。
+	    */
+	   EVENT_TX_TP_CTS = 5,
+	   /* 连接管理模式下的接收数据包完成应答，进行连接数据控制。
+	    */
+	   EVENT_TX_TP_ACK = 6,
+	   /* 连接管理模式下的传输中止，进行连接数据控制。
+	    */
+	   EVENT_TX_TP_ABRT= 7,
+
+	   /* 数据包准备发送。当EVENT_TX_REQUEST返回结果是需要发送时，经发送线程
+	    * 经发送线程确认后，将会受到该消息，表示发送线程已经准备发送该消息了，此时
+	    * 可以返回取消发送指令，实现数据包的取消发送。
+	    */
+	   EVENT_TX_PRE     = 8,
+
+	   /* 数据包发送完成。当确认后的数据包发送完成后，将会受到该消息，表征数据包
+	    * 已经正确的发送完成。
+	    */
+	   EVENT_TX_DONE    = 9,
+
+	   /* 数据包发送失败。当确认后的数据包发送失败后，将会受到改小。
+	    */
+	   EVENT_TX_FAILS   = 10,
+
+	   // CAN 消息函数初始化。当第一次运行函数时将会收到该消息，可重复发送。
+	   EVENT_CAN_INIT   = 11,
+
+	   // CAN 消息复位。再次执行初始化操作。
+	   EVENT_CAN_RESET  = 12
+       }EVENT_CAN;
+    3. 由于CAN数据包是自由发送，因此需要设计一个发送数据包的触发器引擎，该数据结构定义在
+       文件charge.h中，结构如下：
+       // 通信报文生成依据
+       struct can_pack_generator {
+	   // 所属阶段
+	   CHARGE_STAGE stage;
+	   // 生成PGN
+	   unsigned int pgn;
+	   // 数据包优先级
+	   unsigned int prioriy;
+	   // 数据包长度
+	   unsigned int datalen;
+	   // 数据包发送周期
+	   unsigned int period;
+	   // 心跳计数
+	   unsigned int heartbeat;
+	   // 数据包名称
+	   const char *mnemonic;
+       };
+       可以看到属性定义中包含所属阶段的属性，这是由于在不同的充电阶段，监控需要发送不同的
+       的数据包，通过这个属性就可以区分出来。
+
 定时器的使用：
     1. 为了适应循环定时、单次定时的需求，定时器分为自动喂狗和一次性定时器。
     2. 定时器的粒度为单次10ms，即每10ms由系统触发一次，然后由Hachiko实现定时器计数。
