git-svn-id: svn://192.168.1.8/ontom/trunk@2606 85aebdb3-f732-af43-9dbd-bcef24ea9265

--- a/FAQ
+++ b/FAQ
@@ -29,3 +29,13 @@
 	$ curl "http://192.168.1.61:8081/job/create.json?t=423434&cid=988766&gun=0&remain=234.5&passwd=000000&c_mode=BV&set_V=560.3&set_I=21&b_mode=time&b_time=60"
 	返回 status=PEDDING 或 status=OK, 标识创建作业成功, 此时可通过监控的查询作业页面看到创建好的充电作业。
 		
+* 关于如何处理傻逼的需求更改问题
+	目前需求在不停地更改，为了更好的适应这种频繁的更改，避免过度的重构代码造成的精神及身体压力，目前整个程序框架结构按照模块思路设计。
+	* 模块：			从历来的直流系统工程看来，整流模块极有可能是外购产品，因此在RS485通信方面做了相关的工作，只需要按照串口框架给出每种设备的通信数据处理过程即可。
+	* 协议：
+	这可能是整个系统最为复杂的一块内容，充电桩本身是不直接和后台通信的，但不可避免的是会出现傻逼要求公司的产品直接通过网口和后台通信，为了实现这个过程，并且使这个过程显得好看，优雅，这里采用了插件式的扩展接口，只需要给定三种函数接口即可。
+	分别是 初始化接口： exso_$(name)_init             --> 必须
+			主循环接口: exso_$(name)_main_loop        --> 可选
+			退出接口：  exso_$(name)_exit             --> 必须
+	若是你需要在每次循环中都要进行一次处理则给定主循环接口。
+	若需要自主实现相关过程，则在初始化时创建线程即可, 需要在扩展退出时主动释放线程资源
