git-svn-id: svn://192.168.1.8/ontom/trunk@3303 85aebdb3-f732-af43-9dbd-bcef24ea9265

--- a/FAQ
+++ b/FAQ
@@ -39,3 +39,7 @@
 			退出接口：  exso_$(name)_exit             --> 必须
 	若是你需要在每次循环中都要进行一次处理则给定主循环接口。
 	若需要自主实现相关过程，则在初始化时创建线程即可, 需要在扩展退出时主动释放线程资源
+
+* 关于RS485设备 /dev/ttyO4, /dev/ttyO5
+	由于ANC-01返回数据较快(500us)以内，在应用程序逻辑内无法快速切换RS485转换芯片的工作模式为接收状态，因此通过修改驱动程序来
+	实现发送和发送完成后转换芯片工作模式的快速切换。
