git-svn-id: svn://192.168.1.8/ontom/trunk@3354 85aebdb3-f732-af43-9dbd-bcef24ea9265

--- a/FAQ
+++ b/FAQ
@@ -43,3 +43,6 @@
 * 关于RS485设备 /dev/ttyO4, /dev/ttyO5
 	由于ANC-01返回数据较快(500us)以内，在应用程序逻辑内无法快速切换RS485转换芯片的工作模式为接收状态，因此通过修改驱动程序来
 	实现发送和发送完成后转换芯片工作模式的快速切换。
+
+* 关于开卡
+	开卡指令如下
