git-svn-id: svn://192.168.1.8/ontom/trunk@3407 85aebdb3-f732-af43-9dbd-bcef24ea9265

--- a/FAQ
+++ b/FAQ
@@ -1,4 +1,206 @@
-﻿* 无刷卡器的情况下如何进行程序逻辑测试？
+﻿* 命名规则
+	古希腊众神名录
+	早期 
+
+	赫卡忒（Hecate）：夜之女神，也是幽灵和魔法的女神；最早出现的神，世界的缔造者之一，创造了地狱。代表了世界的黑暗面。 
+	该亚（Gaea）：大地女神，紧随夜之女神出现的神，世界的缔造者之一，创造了大地，海洋和天空。 
+	尤拉诺斯（Uranus）：天之神。该亚的长子和丈夫，第一任神王。被他儿子推翻。 
+	克洛诺斯（Cronus）：该亚与尤里诺斯的十二个泰坦儿女中最年幼者。和平之神，弑父而成为第二任神王。亦被自己儿子推翻，后来逃亡到意大利，建立自治政权。 
+	瑞亚（Rhea）：十二泰坦之一，克洛诺斯的妻子。 
+	欧申纳斯（Oceanus）：或称俄刻阿诺斯；十二泰坦之一，水之神。生育了地球上所有的河流及三千海洋女仙。 
+	泰西丝（Tethys）：十二泰坦之一，欧申纳斯的妻子。
+	海泼里恩（Hyperion）：十二泰坦之一，光之神。太阳，月亮和黎明之父。
+	西亚（Thea）：十二泰坦之一，海泼里恩之妻。 
+	尼莫西妮（Mnemosyne）：十二泰坦之一，记忆之神。九位缪斯（文艺女神）之母。 
+	爱泼特斯（Iapetus）：十二泰坦之一。普罗米修斯，厄毗米修斯和阿忒拉斯之父。 
+	克瑞斯（Crius）：十二泰坦之一，生长之神。 
+	忒弥斯（Themis）：十二泰坦之一，秩序和正义女神。命运女神和四季之母。 
+	菲碧（Phoebe）：十二泰坦之一，月之女神。 
+	考伊斯（Coeus）：十二泰坦之一，智力之神。菲碧的丈夫。 
+	普罗米修斯（Prometheus）：泰坦爱泼特斯之子。最有智慧的神之一，被称为“先知者”。人类的创造者和保护者。因触怒宙斯被锁在高加索山上，每日有秃鹰啄食其肝脏，然后又长好，周而复始。后被赫拉克剌斯救出。 
+	厄毗米修斯（Epimetheus）：普罗米修斯的兄弟。最愚笨的神之一，被称为“后知者”。因接收了宙斯的礼物-潘多拉为妻，结果从“潘多拉之盒”中飞出了疾病，罪恶等各种灾难降临人间。 
+	阿忒拉斯（Atlas）：普罗米修斯的另一个兄弟。最高大强壮的神之一。因反抗宙斯失败而被罚顶天。 
+	美狄丝（Metis）：聪明美丽的女泰坦，有预言能力。曾帮助宙斯夺取王位，后来被宙斯诱惑，失身于他。最后葬身于宙斯腹中。 
+
+	十二主神 
+
+	宙斯（Zeus）：克洛诺斯和瑞亚之子；掌管天界，是第三任神王；以贪花好色著名。 
+	赫拉（Hera）：宙斯的姐姐和夫人，美丽的天后；婚姻的保护神，尤其是已婚的女人的保护者。 
+	波塞冬（Poseidon）：宙斯的兄弟；掌管大海；脾气暴躁，贪婪。 
+	哈得斯（Hades）：宙斯的兄弟；掌管冥府，同时也是财富之神；有一顶可以隐身的帽子；残忍，可怕，但很守信。 
+	德墨忒耳（Demeter）:克洛诺斯和瑞亚之女，宙斯的姐姐；农业女神。
+	阿瑞斯（Ares）：宙斯与赫拉之子；战争之神；粗暴而嗜血，但并非真正的勇士。
+	雅典娜（Athena）：宙斯与美狄丝结合的产物；智慧女神和女战神；她是智慧，理智和纯洁的化身。
+	阿波罗（Apollo）：宙斯和勒托之子，和阿耳忒弥斯是双生兄妹；太阳神；全名为福玻斯·阿波罗（Phoebus Apollo）。 
+	阿佛洛狄忒（Aphrodite）：爱，美和欲望之神；从海中的泡沫中生出。 
+	赫尔墨斯（Hermes）：宙斯和迈亚之子；众神中最快者；盗窃者的守护神，商业之神，黄泉的引导者。 
+	阿耳忒弥斯（Artemis）：宙斯和勒托之女，与阿波罗是双生兄妹；美丽的女猎神和月神，青年人的保护神。 
+	赫淮斯托斯（Hephaestus）：宙斯与赫拉之子，神中唯一丑陋者，但妻子却是爱与美之神阿佛洛狄忒；火和锻造之神，为众神制造武器和铠甲；铁匠和织布工的保护神。 
+
+	其他神祗 
+
+	赫斯提（Hestia）：克洛诺斯和瑞亚之女，宙斯的姐姐；处女之神，不涉政务，是灶神及健康之神，主管家庭事务。 
+	塔那托斯（Thanatos）：死神；黑夜女神之子，资格最丈夫的神之一，有一个孪生兄弟——睡神（许普诺斯）；哈得斯的首席武官。 
+	厄里斯（Eris）：宙斯和赫拉之女；不和之女神，最喜挑起不和，最著名的成就是挑起了“特洛伊之战”。 
+	尼弥西斯（Nemesis）：复仇或正义女神；专门惩罚不法之徒。 
+	赫利俄斯（Helios）：阳之神，泰坦海泼里恩之子；阿波罗的前任。 
+	厄俄斯（Eos）：黎明女神。 
+	珀耳塞福涅（Persephone）：德墨忒耳之女；被冥王诱拐，成为冥界之后。 
+	狄俄倪索斯（Dionysus）：宙斯与一名凡间女子塞墨勒的儿子，唯一有凡人血统的正式神祗；酒神；发明了葡萄酒，并推广了葡萄的种植。本身具有双重性格，他能给人带来欢乐和迷醉，但同时又残忍，易怒——正像酒一样。 
+	厄洛斯（Eros）:阿佛洛狄忒和赫尔墨斯或阿瑞斯之子；小爱神。他的形象一般都是蒙着眼睛，因为，爱情总是盲目的。他的“武器” 是魔力标枪或弓箭。被射中的人将会对其见到的第一个异性产生不可抑制的爱情。 
+	赫柏（Hebe）：宙斯和赫拉之女；青春女神，是俄林波斯山的斟酒女郎。后嫁给赫拉克剌斯为妻。 
+	潘（Pan）：赫尔墨斯之子；山林之神；张着一对羊角和一双羊蹄。是个出色的作曲家和笛子演奏家。快乐和顽皮的神，经常和山林的女仙们跳舞。然而，由于他丑陋的外表，总找不到妻子。 
+	命运女神（the Fates）：掌管大地上所有人的命运。共有三位：克罗托（Clotho）纺织生命之线，拉刻西斯（Lachesis）决定生命之线的长度，阿特洛波斯（Atropos）切断生命之线。 
+	美惠三女神（The Graces）：宙斯和欧律诺墨的女儿；众神的歌舞演员，为人间带来诸美；分别是阿格莱亚（Aglaia,光辉女神）, 欧佛洛绪涅（Euphrosyne,欢乐女神）,塔利亚（Thalia,激励女神）。 
+	艺术女神（The Muses）：宙斯和泰坦Mnemosyne的女儿们，共有九人；亦称为缪斯或庇厄利亚的女神们（Pierides），因她们生于庇厄利亚地方。她们是卡拉培（Calliope，雄辩和叙事诗），克利欧（Clio，历史），乌拉妮娅（Urania，天文），梅耳珀弥妮（Melpomene，悲剧），塔利亚（Thalia，喜剧），特普斯歌利（Terpsichore，舞蹈），依蕾托（Erato，爱情诗），波利海妮娅（Polyhymnia，颂歌），优忒毗（Euterpe,抒情诗）。 
+	厄里倪俄斯（the Erinnyes）：复仇女神，又被称为欧墨尼得斯（Eumenides）。无情地报复犯罪者，直到其死亡。对犯弑母大罪的人尤其严厉。共有三人，提希丰（Tisiphone）,美嘉拉（Megaera）,阿耳刻托（Alecto）。她们从尤拉诺斯的血液中诞生。 
+	The Pleiades（七仙女）：阿忒拉斯的七个如花似玉的女儿。分别是伊莱卡（Electra），迈亚（Maia），塔吉忒（Taygete），阿耳刻悠妮（Alcyone），美罗珀（Merope），塞莱诺（Celaeno），丝黛罗普（Sterope）。其中迈亚是赫耳墨斯的母亲。 
+	时序女神（Hours）：执掌自然秩序；共三人——欧诺弥亚（秩序），狄刻（公正），厄瑞涅（和平）。 
+	彭透斯（Pontus）：意思是“深不可测的海”。该亚的儿子和情人。 
+	涅柔斯（Nereus）：彭透斯和该亚之子，外号“海中丈夫人”。是个知识渊博，真诚善良的丈夫神仙。 
+	多丽斯（Doris）：泰坦欧申纳斯之女，三千海洋女仙之一。涅柔斯之妻。 
+	忒提丝：涅柔斯的女儿之中最贤慧者。 
+	海精（The Nereids）：涅柔斯和多丽斯的五十个可爱女儿。其中的一个阿穆芙莱特（Amphitrite）是海王波塞冬的夫人。 
+	特里同（Triton）：波塞冬和其夫人之子；海中的吹鼓手，所用的乐器是个大海螺。 
+	米诺斯（Minos）：克里特国王；以严密的法治而闻名，因此死后成为冥府的判官之一；宙斯和欧罗巴的儿子。 
+	拉达曼达斯（Rhadamanthys）：丈夫的兄弟，亦是冥土判官之一。（记得《女神的圣斗士》中冥斗士好象有三巨头，不过那第三个家伙的情况似乎很少有资料提及，不知道车田正美从哪儿查到的） 
+	卡吕普索（Calypso）：海上女神，阿忒拉斯的女儿；爱上了凡间的英雄俄底修斯，但由于宙斯的阻挠未能与其成婚。 
+	阿刻罗俄斯（Achelous）：河神，俄刻阿诺斯和忒提丝的三千儿子中最长者。众海妖塞壬之父。 
+	阿尔库俄纽斯（Alcyoneus）：天与地之子，最强大的巨人，在地上时不会被杀死。 
+	阿玛耳忒亚（Amalthea）：海中仙女，有一可从中取食物的牛角。河神阿刻罗俄斯的角被赫拉克剌斯折断后，她将自己的一个送给阿刻罗俄斯。 
+	伊里丝（Iris）：宙斯的使者；彩虹女神；人头鸟哈耳皮埃的妹妹。 
+	琉喀忒亚（Leucothea）：海中女神；波塞冬将俄底修斯的船打碎后，她曾搭救俄底修斯。 
+	珀耳塞（Perse）： Oceanus之女，是赫利俄斯的妻子。 
+	克吕墨涅（Clymene）：俄刻阿诺斯与忒提丝的女儿。好象和若干个神都有过亲密关系，包括普罗米修斯和阿波罗等，并生育了不少子女， 
+	喀耳刻（Circe）：赫利俄斯和珀耳塞的女儿，是个女魔法师，能把人变为牲畜。 
+	普洛透斯（Proteus）：海中丈夫人，变化无穷。 
+	斯卡曼德洛斯（Scamander）：河名，亦是河神名；又叫克珊托斯（Xanthus） 
+	赫斯帕里得斯（Hesperides）：即夜的女儿们；守卫该亚作为结婚礼物送给赫拉的金苹果树。 
+	绪任克斯（Syrinx）：山林女神，为潘所追求，化为芦苇。 
+	帕拉斯（Pallas）：特里同的女儿；雅典娜无意中杀死她，因纪念她，自己该名帕拉斯，自称为帕拉斯·雅典娜。 
+	欧律诺墨（Eurynome）：俄刻阿诺斯的女儿，与宙斯生美惠三女神。 
+	格劳克斯（Glaucus）：海神，善做预言。 
+	塔罗斯（Talos）：巨人，青铜时代最后一人；守卫克里特岛。 
+	塞勒涅（Selene）：月女神，泰坦海泼里恩和西亚的女儿。 
+	墨诺提俄斯（Menoetius）：冥王的牧人。 
+	比亚（Bio）：凶猛的化身，帕拉斯与与斯堤克斯河所生的儿子。 
+	克拉托斯（Cratos）：强力的化身，帕拉斯与斯堤克斯河所生的儿子，是"凶猛"的兄弟。 
+
+	非人生物 
+
+	厄喀德那（Echidna）：半人半蛇的怪物。生了许多著名的妖怪——如勒耳那水蛇，涅墨亚狮子，咯迈拉，斯芬克斯等。 
+	戈耳工（Gorgons）：福耳库斯与刻托的三个女儿，其中之一是墨杜萨。 
+	克律萨俄耳（Chrysaor）：波塞冬和墨杜萨所生的怪物，珀伽索斯的兄弟。 
+	刻耳柏洛斯（Cerberus）： 三头狗，堤丰和厄刻德那所生，把守地狱的大门。 
+	刻托（Ceto）：彭透斯和该亚的女儿；生戈耳工，格莱埃，及大蛇拉冬。 
+	拉冬（Ladon）：看守金苹果的百首龙，刻托和福耳库斯所生。 
+	弥诺陶洛斯（Minotaur）：克里特岛上牛头人身的怪物，喜食人肉，尤其是童男童女；著名的克里特迷宫即为软禁它而建。 
+	珀伽索斯（Pegasus）：飞马；波塞冬与墨杜萨所生，当珀耳修斯割下墨杜萨的头时，与克律萨俄耳一起从墨杜萨头中跳出。 
+	克律萨俄耳（Chrysaor）:波塞冬与墨杜萨所生的怪物，飞马珀伽索斯的兄弟。 
+	格莱埃（Graeae）：福耳库斯和刻托的三个女儿，与戈耳工是姊妹；她们共有一只眼睛，一只牙齿。 
+	许德拉（Hydra）：堤丰和厄咯德拉所生的水蛇，有九个头，因住在勒耳那大泽，又称勒耳那大蛇。 
+	喀迈拉（Chimaera）：喷火的妖怪，为堤丰和厄喀德那所生，狮头，羊身，蛇尾。 
+	斯库拉（Scylla）：意大利和西西里海峡之间的海妖。 
+	斯芬克斯（Sphinx）：堤丰和厄喀德那所生的怪物，有翼，长着美女的头，和狮子的身子；因俄狄浦斯杀父，前往忒拜为害。 
+	堤丰（Typhon）：该亚和塔耳塔洛斯的最小儿子，极度恐怖的怪兽；又称为堤福俄斯（Typhoeus）。 
+	福耳库斯（Phorcys）：号称“百怪之父”，生育了很多怪物。 
+	塞壬（Siren）：福耳库斯和一位缪斯的女儿。她们住在一个海岛上，以歌声诱惑并杀死路过的水手。 
+	墨杜萨（Medusa）：戈耳工之一；凡见到她头的人都将变成石头。 
+
+	人类和半神人  
+	
+	潘多拉（Pandora）：赫淮斯托斯用泥土造成的女人，众神赐与诸善。 
+	厄帕俄斯（Epeius）：希腊军中著名的巧匠，建造了木马。
+	厄瑞克透斯（Erechtheus）：雅典王；该亚和赫淮斯托斯之子，由雅典娜抚养大。
+	厄特克勒斯（Eteocles）：俄狄浦斯的儿子，抵抗攻打忒拜的七将，死于自己兄弟之手。
+	俄里翁（Orion）：俊美而强壮的猎人，为阿忒拉斯的七个女儿所爱，死后变成猎户座。 
+	俄耳甫斯（Orpheus）：缪斯之一卡利俄珀的儿子；他能以琴声使山林，岩石移动，使野兽驯服。死后成为天琴座。 
+	伊俄（Io）：是地中海地区某国公主，为宙斯所爱，将他变成小母牛，被赫拉派牛氓追逐，后在普罗米修斯的指引下逃脱。最后成为埃及的女神伊西丝（Isis）。 
+	阿斯克勒皮俄斯（Asclepius）：天医，阿波罗与克吕墨涅的儿子；为宙斯所杀。 
+	布里塞伊丝（Briseis）：特洛亚著名美女；为阿喀琉斯所俘虏，由于她的谜煞虿引起了希腊将帅不和。
+	欧罗巴（Europe）：美丽的人间女子，为宙斯所引诱，是宙斯最著名的情人之一。
+	卡德摩斯（Cadmus）：欧罗巴的哥哥；忒拜城的建立者。
+	卡帕纽斯（Capaneus）：攻打忒拜的七雄之一。
+	卡珊德拉（Cassandra）：普里阿摩斯和赫卡柏之女；是女预言家，曾预言了特洛亚的毁灭。
+	代达罗斯（Daedalus）：全希腊最有名的建造大师，善于各种工艺技巧。
+	尼柔斯（Nireus）：泉水女神的儿子，希腊将领中最英俊者。
+	皮拉（Pyrrla）：厄庇墨透斯和潘多拉的女儿，丢卡利翁的妻子；唯一躲过宙斯洪水的两个人。
+	安菲阿剌俄斯（Amphiaraus）：著名先知，攻打忒拜的七雄之一。
+	安菲翁（Amphion）：宙斯的儿子；以竖琴的魔力建成了忒拜的宫殿。
+	安德洛玛刻（Andromache）：赫克托耳的妻子，以对丈夫钟爱著称。
+	安提罗科斯（Antilochus）：攻打特洛亚的希腊将领之一，以英俊勇敢著称，是阿喀琉斯的挚友之一。
+	丢卡利翁（Deucalion）：普罗米修斯和克吕墨涅之子，皮拉的丈夫；宙斯发洪水毁灭人类时只留下他们俩。
+	伊卡洛斯（Icarus）：代达罗斯之子；和父亲一起逃离克里特时，因飞近太阳，落水而死。
+	伊克西翁（Ixion）：拉庇泰国王；因意图对赫拉无理，宙斯将他缚在旋转的车轮上，永远在冥土受罚。
+	伊阿西翁（Jasion）：宙斯和海中某女神的儿子，他追求农业女神德米特耳，为宙斯所杀。
+	伊阿宋（Jason）：夺取金羊毛的阿耳戈英雄的首领；美狄亚的丈夫。
+	西绪福斯（Sisyphus）：人类中最狡猾者；死后在冥土受罚，永远推巨石上山，但将及山顶巨石又复落下。
+	克律塞伊丝（Chryseis）：特洛亚方面阿波罗祭司的女儿，为阿伽门农俘虏，后者拒绝将她交还给其父，结果导致太阳神的报复。
+	克吕泰涅斯特拉（Clytaemnestra）：阿伽门农的妻子，杀死了自己的丈夫，又被自己儿子所杀。
+	狄俄墨得斯（Diomedes）：特洛亚战争中，希腊方面著名的大英雄。
+	希波墨冬（Hippomedon）：攻打忒拜的七雄之一。
+	忒修斯（Theseus）：雅典王；希腊神话中的著名大英雄之一。
+	忒勒玛科斯（Telemachus）：奥德修斯的儿子;父亲从特洛亚战争中归来后,帮助父亲杀死所有求婚者.
+	忒拉蒙（Telamon）：夺取金羊毛的阿耳戈英雄之一。
+	忒瑞西阿斯（Tiresias）：忒拜先知，盲目，据说因无意中窥见雅典娜出浴而被判失明。
+	阿喀琉斯（Achilles）：珀琉斯和海中女神忒提丝之子，浑身刀枪不入，唯一的弱点是脚踝；特洛亚战争中的希腊最伟大英雄。 
+	阿德剌斯托斯（Adrastus）：阿耳戈斯王；攻打忒拜的七将之一。
+	阿伽门农（Agamemnon）：阿特柔斯之子；特洛亚战争中希腊方面的统帅。 
+	阿尔刻提斯（Alcestis）：珀利阿斯的女儿；以钟情丈夫著名，自愿代丈夫就死。 
+	阿塔兰忒（Atalanta）：伊阿索斯和克吕墨涅的女儿,美丽而野性的女猎手. 
+	阿特柔斯（Atreus）：珀罗普斯和希波达弥亚的儿子,坦塔罗斯的孙子. 
+	欧律斯透斯（Eurystheus）：珀耳修斯的孙子;赫拉克剌斯被罚为他做十二件大事. 
+	拉奥孔（Laocoon）：特洛亚城的阿波罗祭司,因他劝告特洛亚人警惕木马,雅典娜震怒, 派两条蛇将他咬死. 
+	帕里斯（Paris）：特洛亚王子;由于他诱拐天下第一美女海伦而引起特洛亚战争. 
+	帕耳忒诺派俄斯（Parthenopaeus）：阿德剌斯托斯的兄弟,攻打忒拜的七英雄之一. 
+	帕特洛克洛斯（Patroclus）：诺提俄斯之子;阿喀琉斯的密友;死于赫克托耳之手, 他的死使阿喀琉斯重新参战攻打特洛亚. 
+	法厄同（Phaethon）：阿波罗和克吕墨涅的儿子;因强驾阿波罗的神车,从天上跌下致死. 
+	波吕尼刻斯（Polynices）：俄狄浦斯和伊俄卡斯忒的儿子;攻打忒拜的七英雄之一. 
+	坦塔罗斯（Tantalus）：宙斯的儿子,众神的朋友;因杀死儿子宴请天神,被罚入冥土永受饥渴之苦. 
+	美狄亚（Medea）：美丽的女魔法师,她帮助伊阿宋取得金羊毛,并嫁给他;后因伊阿宋移情别恋,亲手杀苏煞蛟己的两个儿子并设计杀死了伊阿宋的新欢. 
+	珀利阿斯（Pelias）：伊阿宋的叔叔,他篡夺了本应属于伊阿宋的王位. 
+	珀琉斯（Peleus）：阿耳戈英雄之一;忒提丝的丈夫,阿喀琉斯之父. 
+	珀罗普斯（Pelops）：坦塔罗斯之子;被其父做成菜肴给天神食用,后为命运女神复活. 
+	珀涅罗珀（Penelope）：奥德修斯忠贞的妻子;丈夫远征特洛亚失踪后,拒绝了所有求婚者, 一直等待丈夫归来. 
+	珀耳修斯（Perseus）：宙斯和达那厄的儿子;希腊神话中的大英雄之一. 
+	辛尼斯（Sinnis）：著名强盗,外号"扳松贼",用两棵松树将旅人撕裂;波塞冬之子;为忒修斯所杀. 
+	达玛斯忒斯（Damastes）：著名强盗,外号"铁床贼";没准儿也是波塞冬之子;为忒修斯所杀. 
+	斯喀戎（Sciron）：著名强盗,强迫旅人为他洗脚;差不多也是波塞冬之子;被忒修斯杀死. 
+	埃厄忒斯（Aeetes）：赫利俄斯和珀耳塞之子,喀耳刻之兄,美狄亚之父. 
+	埃涅阿斯（Aeneas）：阿佛洛狄忒的儿子,特洛亚英雄之一. 
+	埃俄罗斯（Aeolus）：希波忒斯之子,克苏托斯之父;众神的朋友,掌管诸风. 
+	埃阿斯（Ajax）：忒拉蒙和厄里斯珀之子,通称大埃阿斯;特洛亚战争中的希腊英雄. 
+	埃阿斯（Ajax）：俄琉斯之子,通称小埃阿斯;特洛亚战争中的希腊英雄. 
+	俄琉斯（Oileus）：阿耳戈英雄之一. 
+	恩底弥翁（Endymion）：埃特里俄斯俊美的儿子,为月女神塞勒涅所钟爱. 
+	海伦（Helen）：宙斯和勒达的女儿,人间绝色;墨涅拉俄斯的妻子;为帕里斯拐走而引起特洛亚战争. 
+	曼托（Manto）：忒瑞西阿斯的女儿,亦善预言. 
+	许拉斯（Hylas）：赫拉克剌斯的密友;美丽的男子,被水妖钦煞蜻. 
+	淮德拉（Phaedra）：弥诺斯的女儿的女儿,忒修斯之妻. 
+	透克洛斯（Teucer）：河神斯卡曼德洛斯的儿子;第一个特洛亚王. 
+	涅索斯（Nessus）：一个渡旅客过河的艄公,马人;因调戏赫拉克剌斯的妻子被他杀掉, 但临死设计害死赫拉克剌斯. 
+	涅琉斯（Neleus）：阿耳戈英雄之一. 
+	涅斯托耳（Nestor）：涅琉斯的儿子,希腊某部的国王,以睿智著称,且为人公正,长于言辞. 
+	喀戎（Chiron）：文武双全的马人;许多希腊英雄的丈夫师. 
+	喀耳刻（Circe）：赫利俄斯和珀耳塞的女儿;法力高强的魔法师. 
+	阿德墨托斯（Admetus）：参加过卡吕冬野猪狩猎,阿耳戈英雄之一;以他忠贞的妻而著名。 
+	菲罗克忒忒斯（Philoctetes）：赫拉克剌斯的朋友;赫拉克剌斯临死时将弓箭送给他. 
+	普里阿摩斯（Priams）：特洛亚战争时期的特洛亚国王,帕里斯之父. 
+	斯屯托耳（Stentor）：希腊人,著名的大嗓门,声音洪亮可抵五十人. 
+	堤丢斯（Tydeus）：攻打忒拜七将之一. 
+	提提俄斯（Tityus）：宙斯和厄拉瑞的儿子,因对拉托那无理而在冥土受罚,肝脏为群鹰啄食. 
+	奥革阿斯（Augeas）：波塞冬或赫利俄斯的儿子;金羊毛英雄之一;扫除他牛棚中的粪便是赫拉克剌斯的十二件工作之一. 
+	奥托吕科斯（Autolycus）：著名的窃贼和骗子;奥德修斯的外祖父. 
+	塞墨勒（Semele）：卡德摩斯的女儿;和宙斯生狄俄倪索斯. 
+	塔罗斯（Talus）：代达罗斯的外甥,因被代达罗斯嫉妒而被杀. 
+	赫克托耳（Hector）：普里阿摩斯和赫卡柏的儿子,帕里斯的兄弟,特洛亚最勇猛的英雄,为阿喀琉斯所杀. 
+	赫丈夫（Hellen）：皮卡和丢卡利翁的儿子.希腊一名即从他而来. 
+	赫拉克剌斯（Heracles）：希腊神话中最伟大的英雄,阿尔克墨涅和宙斯所生的儿子,以力大闻名. 
+	赫西俄涅（Hesione）：普里阿摩斯的姊妹,被赫拉克剌斯从海怪手中救出,嫁给忒拉蒙. 
+	墨勒阿革洛斯（Meleager）：狩猎卡吕冬野猪的著名英雄. 
+	墨涅拉俄斯（Menelaus）：阿特柔斯之子,阿伽门农的弟弟,海伦的丈夫;特洛亚战争中的希腊高级将领.
+
+* 无刷卡器的情况下如何进行程序逻辑测试？
 	通过命令行工具创建作业即可
 	$ curl "http://$IP:8081/job/create.json?t=$timestamp&cid=$cardid&gun=$gunsn&remain=$remainmoney&passwd=$passwd&c_mode=$cmode{&set_V=$setI&set_I=$setI}&b_mode=$bmode&$b_mode_opt=$value"
 	参数说明:
@@ -43,6 +245,14 @@
 * 关于RS485设备 /dev/ttyO4, /dev/ttyO5
 	由于ANC-01返回数据较快(500us)以内，在应用程序逻辑内无法快速切换RS485转换芯片的工作模式为接收状态，因此通过修改驱动程序来
 	实现发送和发送完成后转换芯片工作模式的快速切换。
-
+* 关于读卡器SP600+
+	默认状态下，SP600+的默认工作速度是19200bps, 现将读卡器工作波特率设定为9600bps
+	发送指令如下：
+		07 01 48 01 00 BCC 03
+	读卡器回应:
+		06 01 00 00 F8 03 标识成功
+	给读卡器断电重启，此时使用9600的波特率通信即可。
 * 关于开卡
-	开卡指令如下
+	开卡需要使用testing/card 程序，具体方式参见 ./card -h
+* 关于电能表
+	目前采用的是华立3相多功能电能表，程序中只需要设定电表地址即可
